Рецепты из игрока утащил в отдельный контроллер. Подготовка к переносу xml рецептов на новый формат и загрузку.